# YarnSpinner-Rust-Embedded

./: .gitmodules  Cargo.toml
crates/codegen/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: internal_value.rs  lib.rs  library.rs  line_id.rs  operator.rs  position.rs  yarn_value.rs
crates/core/src/types/: function.rs  type.rs
crates/core/src/yarn_fn/: function_registry.rs  function_wrapping.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: command.rs  dialogue.rs  dialogue_option.rs  events.rs  lib.rs  line.rs  markup.rs  variable_storage.rs  virtual_machine.rs
crates/runtime/src/markup/: attribute_marker_processor.rs  line_parser.rs  markup_parse_error.rs
crates/runtime/src/virtual_machine/: execution_state.rs  state.rs
crates/yarnspinner/: Cargo.toml
crates/yarnspinner/src/: lib.rs
crates/yarnspinner/tests/test_base/: mod.rs  step.rs  test_plan.rs
