[workspace]
resolver = "2"

members = [
    "crates/yarnspinner",
    "crates/runtime",
    "crates/core",
    "crates/codegen",
]

# Source: https://github.com/bevyengine/bevy/blob/main/examples/README.md#1-tweak-your-cargotoml
## Make Wasm builds as small as possible
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
