[package]
name = "yarnspinner_runtime"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = ["game-development"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Runtime / VM for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = ["std"]
std = [
    "icu_locid/std",
    "icu_plurals/std",
    "fixed_decimal/ryu",
    "unicode-normalization/std",
]
serde = [
    "dep:serde",
    "yarnspinner_core/serde",
    "icu_locid/serde",
]

[dependencies]
yarnspinner_core = { path = "../core", version = "0.5.0" }
unicode-normalization = { version = "0.1", default-features = false }
unicode-segmentation = "1"
log = "0.4"
icu_plurals = { version = "1.5", features = ["default"] }
icu_locid = { version = "1.5", default-features = false }
fixed_decimal = { version = "0.5", default-features = false, features = [
    "ryu",
] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
